tests/tooling/fixtures/native/recovery/negative/negative_pure_definition_impure_unannotated_extern_call.objc3
// Negative fixture: pure definitions reject unannotated extern calls.
// Expected diagnostic code(s): O3S215.
module NegativePureDefinitionImpureUnannotatedExternCall;

fn ext_impure() -> i32;

pure fn touch() -> i32 {
  return ext_impure();
}

fn main() -> i32 {
  return touch();
}
